k8s/traefik-ping-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ping
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: ping
      port: 8080
      targetPort: 8080
